syntax = "proto3";
package movie;
option go_package = "github.com/henrystream/movie-streaming/movie-service/proto";

service MovieService {
    rpc CreateMovie (CreateMovieRequest) returns (MovieResponse);
    rpc GetMovie (GetMovieRequest) returns (MovieResponse);
    rpc ListMovies (EmptyRequest) returns (ListMoviesResponse);
    rpc UpdateMovie (UpdateMovieRequest) returns (MovieResponse);
    rpc DeleteMovie (DeleteMovieRequest) returns (DeleteMovieResponse);
}

message CreateMovieRequest {
    string title = 1;
    string genre = 2;
    int32 year = 3;
}

message GetMovieRequest {
    int32 id = 1;
}

message UpdateMovieRequest {
    int32 id = 1;
    string title = 2;
    string genre = 3;
    int32 year = 4;
}

message DeleteMovieRequest {
    int32 id = 1;
}

message MovieResponse {
    int32 id = 1;
    string title = 2;
    string genre = 3;
    int32 year = 4;
}

message EmptyRequest {}

message ListMoviesResponse {
    repeated MovieResponse movies = 1;
}

message DeleteMovieResponse {
    bool success = 1;
}